<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5eb7b7"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="615dp"
        android:background="#96d1c7"
        android:text="@string/grade_calculator"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/N4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="200dp"
        android:autofillHints=""
        android:background="#96d1c7"
        android:ems="10"
        android:hint="@string/final_30"
        android:inputType="numberSigned"
        android:visibility="visible" />


    <EditText
        android:id="@+id/N3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="300dp"
        android:autofillHints=""
        android:background="#96d1c7"
        android:ems="10"
        android:hint="@string/mid_terms_30"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/N2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="400dp"
        android:autofillHints=""
        android:background="#96d1c7"
        android:ems="10"
        android:hint="@string/homework_25"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/N1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="500dp"
        android:background="#96d1c7"
        android:ems="10"
        android:hint="@string/quizes_15"
        android:importantForAutofill="no"
        android:inputType="numberSigned" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="210dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="575dp"
        android:background="#96d1c7"
        android:text="@string/please_full_the_following_situation"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/N5"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="125dp"
        android:background="#ffafb0"
        android:text="@string/your_result"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#fc7978"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="10dp"

        android:layout_marginBottom="40dp"
        android:backgroundTint="#fc7978"
        android:text="Restart" />
</RelativeLayout>
